--- a/package.json
+++ b/package.json
@@ -4,19 +4,16 @@
   "description": "google api app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/K-ai30/Google-Books-Search.git"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install-client": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run install-client && npm run build"
   },
   "author": "Alia Kyle Perry",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/K-ai30/Google-Books-Search/issues"
-  },
-  "homepage": "https://github.com/K-ai30/Google-Books-Search#readme",
-  "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
